corrected gitignore to ignore .json files and cities file in assets folder

--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,5 @@
 # API key.
 api.key
 # Forecast used for testing, no need to call API during testing.
-assets/*.json
+app/assets/*.json
+app/assets/cities
